[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/Station/Elevator.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Interactables/Elevator/Elevator6.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Interactables/Elevator/Elevator5.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Interactables/Elevator/Elevator9.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Interactables/Elevator/Elevator10.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Interactables/Elevator/Elevator8.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Interactables/Elevator/Elevator14.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Interactables/Elevator/Elevator13.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Interactables/Elevator/Elevator7.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Interactables/Elevator/Elevator11.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Interactables/Elevator/Elevator12.png" type="Texture" id=11]
[ext_resource path="res://Scenes/Station/Environment/Elevator.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": false,
"name": "Close",
"speed": 15.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 7 ) ],
"loop": false,
"name": "Open",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30.6249, 22.5002 )

[node name="Elevator" type="Node2D"]
script = ExtResource( 1 )

[node name="Elevator" type="Sprite" parent="."]
texture = ExtResource( 12 )

[node name="ElevatorSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Close"
frame = 8
playing = true

[node name="OpenArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OpenArea"]
position = Vector2( 0.713486, -11.1779 )
shape = SubResource( 2 )
[connection signal="body_entered" from="OpenArea" to="." method="_on_OpenArea_body_entered"]
[connection signal="body_exited" from="OpenArea" to="." method="_on_OpenArea_body_exited"]
